--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,216 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin-left: 10px;
+  margin-right: 10px;
+  
+  font-family: "Quicksand";
+  color: #333;
+}
+ .navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 100%;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1 {
+  color: #f1356d;
+}
+.navbar .links {
+  margin-left: auto;
+}
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: #f1356d;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  position: relative;
+}
+.content {
+ 
+  max-width: 100%;
+  margin: 40px auto;
+  padding: 20px;
+} 
+.home{
+  max-width: 100%;
+
+} 
+
+/* blog previews / list */
+.result-preview {
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+.result-preview:hover {
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.result-preview h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+}
+.result-preview a{
+  text-decoration: none;
+}
+
+/* blog details page */
+.search-details h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 10px;
+}
+.search-details div {
+  margin: 20px 0;
+}
+.search-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* create new blog form */
+.create {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 30px;
+}
+.create input, .create textarea, .create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.search input{
+  padding: 6px 10px;
+  margin: 10px 10px;
+  border: 1px solid #ddd;
+
+}
+.search select{
+  padding: 6px 10px;
+  margin: 10px 10px;
+  border: 1px solid #ddd;
+
+}
+
+.search button{
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+
+}
+
+.tab {
+  overflow: hidden;
+  border: 1px solid #f2f2f2;
+  display: flex;
+  align-items: center;
+  /* background-color: #f1f1f1;*/
+}
+
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button:focus {
+  background-color: #ddd;
+}
+/* footer */
+.footer footer{
+  position: absolute; 
+  border-top: 1px solid #f2f2f2;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  height: auto;
+  width: 100vw;
+ 
+}
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.footer-content h3{
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #f1356d;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+.infos {
+list-style: none;
+display: flex;
+align-items: center;
+justify-content: center;
+
+margin: 0.5rem 0 1rem 0;
+
+}
+.border {
+  color:  #f1356d;
+  font-size: 1.5rem;
+}
+
+/*data visual*/
+.visual {
+  align-items: center;
+  height: 300px;
+  width: 300px;
+
 }
