--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,6 @@
 /* base styles */
 * {
   margin: 0;
-  margin-left: 10px;
-  margin-right: 10px;
-  
   font-family: "Quicksand";
   color: #333;
 }
@@ -14,14 +11,16 @@
   display: flex;
   align-items: center;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 0 40px;
+
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #f1356d;
+  color: #0277bd;
 }
 .navbar .links {
   margin-left: auto;
+
 }
 .navbar a {
   margin-left: 16px;
@@ -29,7 +28,7 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #f1356d;
+  color: #016097;
 }
 
 .container{
@@ -44,7 +43,49 @@
 .home{
   max-width: 100%;
 
-} 
+}
+
+.container-class {
+  margin : auto 50px;
+
+}
+
+/* login form*/
+label {
+  display: block;
+  text-align: left;
+  margin-top: 10px;
+}
+
+.card-container.card {
+  
+  max-width: 350px !important;
+  padding: 40px 40px;
+}
+.card {
+
+  padding: 20px 25px 30px;
+  margin: 0 auto 25px;
+  margin-top: 50px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.login-img-card {
+  width: 80px;
+  height: 80px;
+  margin: -90px auto 10px;
+  display: block;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+
+/* admin page*/
 
 /* blog previews / list */
 .result-preview {
